--- a/metadata.yaml
+++ b/metadata.yaml
@@ -34,5 +34,6 @@ subjects:
 - !lcsh 'French poetry -- 19th century'
 - !lcsh 'Provençal poetry -- 19th century'
 - !lcc 'PC'
+- GITenberg
 title: Le Poème du Rhône, en XII chants. Texte Provençal et Traduction Française
 url: http://www.gutenberg.org/ebooks/37854
